suppressed warning messages about reflective access by msgPack